tests/derive-specifier/duplicate-derive-2.stderr
error: encountered duplicate `#[derive(BitfieldSpecifier)]` parameter
 --> $DIR/duplicate-derive-2.rs:4:39
  |
4 | #[derive(BitfieldSpecifier)] #[derive(BitfieldSpecifier)]
  |                                       ^^^^^^^^^^^^^^^^^

error: previous `#[derive(BitfieldSpecifier)]` parameter here
 --> $DIR/duplicate-derive-2.rs:4:10
  |
4 | #[derive(BitfieldSpecifier)] #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^
